<resources>
    <string name="app_name">Hacker_News_App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_top_stories">Top Stories</string>
    <string name="nav_new_stories">New Stories</string>
    <string name="nav_best_stories">Best Stories</string>
    <string name="nav_show_hn">Show HN</string>
    <string name="nav_ask_hn">Ask HN</string>
    <string name="nav_job">Jobs</string>
    <string name="saved_stories">Saved Stories</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Top Stories</item>
        <item>New Stories</item>
        <item>Best Stories</item>
        <item>Show HN</item>
        <item>Ask HN</item>
        <item>Jobs</item>
        <item>Saved Stories</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
