<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_top_stories"
            android:title="@string/nav_top_stories" />
        <item
            android:id="@+id/nav_new_stories"
            android:title="@string/nav_new_stories" />
        <item
            android:id="@+id/nav_best_stories"
            android:title="@string/nav_best_stories" />
        <item
            android:id="@+id/nav_show_hn"
            android:title="@string/nav_show_hn" />
        <item
            android:id="@+id/nav_ask_hn"
            android:title="@string/nav_ask_hn" />
        <item
            android:id="@+id/nav_job"
            android:title="@string/nav_job" />
        <item
            android:id="@+id/nav_saved"
            android:title="@string/saved_stories"/>
    </group>
</menu>